# flir_adk_ethernet

./:   .gitignore  CMakeLists.txt  README.md  init_ipconfig_adk.sh  nodelet_plugins.xml  package.xml  sendCommand
example_calibrations/: BlackFlyS.yaml
include/flir_adk_ethernet/: BaseCameraController.h  CameraController.h  EthernetCamera.h  ImageEventHandler.h  ImageFormat.h  SharedTypes.h  SyncCameraController.h  TimeDifference.h  TimeSynchronizer.h  Util.h
include/flir_boson_ethernet/: BaseCameraController.h  BosonCamera.h  CameraController.h  EthernetCamera.h  ImageEventHandler.h  ImageFormat.h  SharedTypes.h  SyncCameraController.h  TimeDifference.h  TimeSynchronizer.h  Util.h
launch/: blackfly.launch  boson.launch  flir_boson.launch  multiple_cameras.launch  sync_camera.launch  sync_camera_ford.launch  sync_camera_lexus.launch  sync_visible_thermal.launch  time_test.launch
msg/: MultiTimeHeader.msg
spinnaker_wrappers/: CameraListWrapper.cpp  CameraListWrapper.h  CameraWrapper.cpp  CameraWrapper.h  SystemWrapper.cpp  SystemWrapper.h
src/: flir_adk_ethernet_node.cpp  flir_boson_ethernet_node.cpp  flir_boson_ethernet_sync_node.cpp
src/flir_adk_ethernet/: EthernetCamera.cpp  ImageEventHandler.cpp  ImageFormat.cpp  Util.cpp
src/flir_boson_ethernet/: EthernetCamera.cpp  ImageEventHandler.cpp  ImageFormat.cpp  Util.cpp
src/nodelets/: BaseCameraController.cpp  BosonCamera.cpp  CameraController.cpp  SyncCameraController.cpp  TimeDifference.cpp  TimeSynchronizer.cpp
srv/: GetNode.srv
test/: test_flir_adk_ethernet.cpp  test_flir_boson_ethernet.cpp
test/mocks/: MockCamera.h  MockNodeMap.h
tests/: CMakeLists.txt  Makefile  stringCompare.cpp
